--- a/myweb.html
+++ b/myweb.html
@@ -4,6 +4,7 @@
     <title>Ouahila Website</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="myweb.css" />
+    <script src="./mysrcipt.js"></script>
   </head>
   <body>
     <header>
